--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,72 @@
+.container {
+    max-width: 600px;
+    margin: 60px auto;
+    background: white;
+    padding: 60px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 10px;
+}
+
+.city {
+    display: flex;
+    margin: 10px;
+    justify-content: space-between;
+    padding: 30px 0;
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+}
+
+.city:last-child {
+    border: none;
+}
+
+.date {
+    opacity: 0.7;
+}
+
+.time {
+    font-family: sans-serif;
+    font-size: 48px;
+    font-weight: bold;
+}
+
+.time small {
+    font-family: sans-serif;
+    font-size: 24px;
+    vertical-align: middle;
+    line-height: 36px;
+}
+
 body {
-    background: turquoise;
-    color: white;
+    background: #f9f7fe;
+    font-family: sans-serif;
+}
+
+select {
+    display: block;
+    width: 100%;
+    line-height: 36px;
+    font-size: 18px;
+    font-family: sans-serif;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 h1 {
     text-align: center;
+    font-family: sans-serif;
+    font-size: 36px;
+    color: black;
+}
+
+h2 {
+    margin: 0 0 3px;
+    font-family: sans-serif;
+    font-size: 28px;
+    color: black;
 }
 
 footer {
     text-align: center;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.8);
 }
