--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 .container {
     max-width: 600px;
-    margin: 60px auto;
-    background: #F0FFFF;
+    margin: 150px auto;
+    border: 5px solid whitesmoke;
+    background: #FBF8F5;
     padding: 60px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 10px;
@@ -21,58 +22,69 @@
 
 .date {
     font-family: Cal Sans;
-    color: #1434A4;
+    color: #32527B;
     opacity: 0.7;
 }
 
 .time {
     font-family: Cal Sans;
-    color: #1434A4;
+    color: #32527B;
     font-size: 48px
 }
 
 .time small {
     font-family: Cal Sans;
-    color: #1434A4;
+    color: #32527B;
     font-size: 24px;
     vertical-align: middle;
     line-height: 36px;
 }
 
 body {
-    background-color: #A7C7E7;
+    background-color: #32527B;
     font-family: sans-serif;
 }
 
 select {
     display: block;
-    background-color: #F0FFFF;
-     color: #1434A4;
+    background-color: #FBF8F5;
+    color: #32527B;
     width: 100%;
     line-height: 36px;
-    font-size: 18px;
+    font-size: 22px;
     font-family: Cal Sans;
     font-weight: 200;
     border-radius: 5px;
+    border: 2px solid #32527B;
     padding: 10px;
 }
 
 h1 {
     text-align: center;
     font-family: Cal Sans;
-    font-size: 40px;
-    color: #1434A4;
+    font-size: 64px;
+    color: #32527B;
 }
 
 h2 {
     margin: 0 0 3px;
     font-family: Cal Sans;
     font-size: 32px;
-    color: #1434A4;
+    color: #32527B;
+}
+
+.all-cities {
+    font-size: 14px;
+    font-weight: 500;
+    color:#32527B;
 }
 
 footer {
     text-align: center;
     font-size: 16px;
-    color: #00008B;
+    color: white;
+}
+
+footer a {
+    color: white;
 }
